// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card matches the deep snapshot 1`] = `
<Card
  emoji="Take a nap2"
  text="this is test text string2"
>
  <div
    className="card"
  >
    <h1>
      this is test text string2
    </h1>
    <p>
      Take a nap2
    </p>
  </div>
</Card>
`;

exports[`Card renders without crashing even with no text or emoji data 1`] = `
<div
  className="card"
>
  <h1 />
  <p />
</div>
`;

exports[`Card that it matches an existing snapshot 1`] = `
<div
  className="card"
>
  <h1>
    this is test text string
  </h1>
  <p>
    Take a nap
  </p>
</div>
`;
